force-app/main/default/objects/PH_Run__c/PH_Run__c.object-meta.xml
<CustomObject>
    <label>Profiler Run</label>
    <pluralLabel>Profiler Runs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>Run Name</label>
        <type>Text</type>
    </nameField>
</CustomObject>