force-app/main/default/objects/PH_Run__c/fields/Daily_Stats_Upserted__c.field-meta.xml
<CustomField>
    <fullName>Daily_Stats_Upserted__c</fullName>
    <label>Daily Stats Upserted</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
</CustomField>