force-app/main/default/objects/PH_Run__c/fields/Logs_Processed__c.field-meta.xml
<CustomField>
    <fullName>Logs_Processed__c</fullName>
    <label>Logs Processed</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
</CustomField>