force-app/main/default/objects/PH_Run__c/fields/Queries_Upserted__c.field-meta.xml
<CustomField>
    <fullName>Queries_Upserted__c</fullName>
    <label>Queries Upserted</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
</CustomField>